--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,11 +4,15 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "aspyatkin/ubuntu-18.04-server"
   config.vm.network "forwarded_port", guest: 443, host: 8443
+  config.ssh.forward_agent = true
 
   config.vm.provision "ansible-installer", type: "shell" do |init|
     init.path = "vagrant-ansible-installer.sh"
     run = "once"
   end
+
+  config.vm.provision "gitconfig", type: "shell", 
+    inline: "echo -e '#{File.read("#{Dir.home}/.gitconfig")}' > '/home/vagrant/.gitconfig'"
 
   config.vm.provision "trucking", type: "ansible" do |ansible|
     ansible.verbose = "vvv"
@@ -16,4 +20,6 @@ Vagrant.configure("2") do |config|
     run = "always"
   end
 
+
 end
+
