--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,8 +11,8 @@ Vagrant.configure("2") do |config|
     run = "once"
   end
 
-  config.vm.provision "gitconfig", type: "shell", 
-    inline: "echo -e '#{File.read("#{Dir.home}/.gitconfig")}' > '/home/vagrant/.gitconfig'"
+  #config.vm.provision "gitconfig", type: "shell", 
+  #  inline: "echo -e '#{File.read("#{Dir.home}/.gitconfig")}' > '/home/vagrant/.gitconfig'"
 
   config.vm.provision "trucking", type: "ansible" do |ansible|
     ansible.verbose = "vvv"
