--- a/ansible/roles/playbook.yml
+++ b/ansible/roles/playbook.yml
@@ -6,7 +6,7 @@
     - { role: rvm.ruby,
         tags: ruby,
         rvm1_rubies: ['ruby-2.3.1'],
-        rvm1_install_flags: '--auto-dotfiles --user-install',
+        rvm1_install_flags: '--user-install',
         rvm1_install_path: '~/.rvm',
         rvm1_bundler_install: True,
         rvm1_user: 'vagrant',
