neo enterprise plus apt pg supp. packages

--- a/ansible/roles/neo4j/tasks/neo4j_install.yml
+++ b/ansible/roles/neo4j/tasks/neo4j_install.yml
@@ -13,7 +13,7 @@
   apt_repository:
     repo: 'deb http://debian.neo4j.org/repo stable/'
     state: present
-    filename: neo4j
+    filename: neo4j-enterprise
 
 - name: install_neo4j
   apt:
