tf and vagrant regress tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 /vagrant/.vagrant
 /vagrant/init.log
+/terraform/.terraform
 /terraform/offline
+/terraform/hosts.ini
+/terraform/terraform.tfstate*
 .DS_Store
