checkpoint terraform/vagrant testing with 18.04 bionic and rvm ppa

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /vagrant/.vagrant
 /vagrant/init.log
-/terraform/.terraform
+/terraform/.terraform*
 /terraform/offline
 /terraform/hosts.ini
 /terraform/terraform.tfstate*
