--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -22,6 +22,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "trucking", type: "ansible" do |ansible|
     ansible.inventory_path = "../ansible/environments/" + ENV['VAGRANT_BUILD_ENV']
     ansible.playbook = "../ansible/playbook.yml"
+    #ansible.verbose = "vvv"
     #ansible.playbook = "../ansible/test.yml"
     run = "always"
   end
