--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,10 +11,10 @@ Vagrant.configure("2") do |config|
 #   v.cpus = 2
 # end
 
-#  config.vm.provision "ansible-installer", type: "shell" do |init|
-#    init.path = "vagrant-ansible-installer.sh"
-#    run = "once"
-#  end
+  config.vm.provision "ansible-installer", type: "shell" do |init|
+    init.path = "vagrant-ansible-installer.sh"
+    run = "once"
+  end
 
   #config.vm.provision "gitconfig", type: "shell", 
   #  inline: "echo -e '#{File.read("#{Dir.home}/.gitconfig")}' > '/home/vagrant/.gitconfig'"
