--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /packer/terraform-from-packer/*tfstate*
 /packer/terraform-from-packer/.terraform
 /packer/terraform-from-packer/hosts.ini
+
+/vagrant/environments/**/init.log
+/vagrant/environments/**/Vagrantfile
