--- a/vagrant/environments/dev/Vagrantfile
+++ b/vagrant/environments/dev/Vagrantfile
@@ -3,7 +3,8 @@
 
 Vagrant.configure("2") do |config|
   config.vm.box = "aspyatkin/ubuntu-18.04-server"
-  config.vm.network forwarded_port, guest: 443, host: 8443
+  %%ports_443_8443%%
+  %%ports_80_8800%%
   config.ssh.forward_agent = true
 
 #  config.vm.provider "virtualbox" do |v|
