--- a/ansible/roles/nginx/tasks/nginx_confs.yml
+++ b/ansible/roles/nginx/tasks/nginx_confs.yml
@@ -2,3 +2,8 @@
 - name: nginx_config
   template: src=hello_world.conf.j2 dest=/etc/nginx/sites-available/default
   notify: nginx_reload
+
+  - name: nginx_reload
+    service:
+      name: nginx
+      state: reloaded
